--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 POSTGRESQL_DATABASE = postgres://uisfwexz:81TIBEqQqUvPgzqWm_mH93MhYdz01zKo@rosie.db.elephantsql.com/uisfwexz
+
+TOKEN_SECRET = password123
